--- a/PawsTracker/package.json
+++ b/PawsTracker/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.9.0",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0"
   },
