--- a/PawsTracker/package.json
+++ b/PawsTracker/package.json
@@ -26,7 +26,8 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "expo-location": "~16.5.5"
+    "expo-location": "~16.5.5",
+    "react-native-maps": "1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
