--- a/PawsTracker/package.json
+++ b/PawsTracker/package.json
@@ -16,18 +16,20 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "date-fns": "^3.6.0",
     "expo": "~50.0.13",
     "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.9.0",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-maps": "1.10.0",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0",
-    "expo-location": "~16.5.5",
-    "react-native-maps": "1.10.0"
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
