--- a/PawsTracker/package.json
+++ b/PawsTracker/package.json
@@ -20,6 +20,7 @@
     "expo": "~50.0.13",
     "expo-image-picker": "~14.7.1",
     "expo-location": "~16.5.5",
+    "expo-notifications": "~0.27.7",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.9.0",
     "react": "18.2.0",
@@ -30,8 +31,7 @@
     "react-native-maps": "1.10.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-svg": "^15.1.0",
-    "react-native-svg-uri": "^1.2.3"
+    "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
