--- a/PawsTracker/app.json
+++ b/PawsTracker/app.json
@@ -19,10 +19,24 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permissions.CAMERA",
+        "android.permissions.ACCESS_FINE_LOCATION",
+        "android.permissions.ACCESS_COARSE_LOCATION"
+ 
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "cameraPermission": "The app accesses your camera to let you share photos."
+        }
+      ]
+    ]
   }
 }
